[tool.poetry]
name = "ai-toolkit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
safetensors = "^0.4.5"
diffusers = {git = "https://github.com/huggingface/diffusers.git"}
transformers = "^4.44.2"
lycoris-lora = "1.8.3"
flatten-json = "^0.1.14"
pyyaml = "^6.0.2"
oyaml = "^1.0"
tensorboard = "^2.17.1"
kornia = "^0.7.3"
invisible-watermark = "^0.2.0"
einops = "^0.8.0"
accelerate = "^0.34.2"
toml = "^0.10.2"
albumentations = "1.4"
pydantic = "^2.9.2"
omegaconf = "^2.3.0"
k-diffusion = "^0.1.1.post1"
open-clip-torch = "^2.26.1"
timm = "^1.0.9"
prodigyopt = "^1.0"
controlnet-aux = "0.0.7"
python-dotenv = "^1.0.1"
bitsandbytes = "^0.43.3"
hf-transfer = "^0.1.8"
lpips = "^0.1.4"
pytorch-fid = "^0.3.0"
optimum-quanto = "^0.2.4"
sentencepiece = "^0.2.0"
huggingface-hub = "^0.25.0"
peft = "^0.12.0"
gradio = "^4.44.0"
python-slugify = "^8.0.4"
mediapipe = "^0.10.15"
modal = "^0.64.128"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
